--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "gulp-sass": "^0.7.1",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-sass": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-haml": "^0.2.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
