--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "test": "node_modules/karma/bin/karma start tests/karma.config.js",
-    "ios": "ionic emulate ios"
+    "ios": "ionic emulate ios",
+    "ios4in": "cordova emulate --target='iPhone (Retina 4-inch)'"
   }
 }
